Updated website components

--- a/fimco/fimcosite/templates/about.html
+++ b/fimco/fimcosite/templates/about.html
@@ -157,7 +157,7 @@
                         <h3>Our Mission</h3>
 {#                        <p>we always complete our missions</p>#}
                     </div>
-                    <p>Being the most trusted gateway to experiencing TZ financial markets offering Information, advise
+                    <p>Being the most trusted gateway to experiencing Tanzania's financial markets offering Information, advise
                         and execution capabilities across all asset classes leveraging innovating channels.
                     </p>
                 </div>
@@ -353,87 +353,101 @@
             </header>
             <hr class="mb-60" />
             <div class="row">
-                <div class="col-lg-4">
-                    <div class="heading-title heading-border-bottom">
-                        <h3>Register</h3>
-                    </div>
-                    <div class="toggle toggle-transparent-body toggle-accordion">
-                        <div class="toggle active">
-                            <label>Personal Info</label>
-                            <div class="toggle-content">
-                                <p>Enter your personal details; names, email, ID, phone... to create your profile. </p>
-                            </div>
-                        </div>
-                        <div class="toggle">
-                            <label>Upload photo</label>
-                            <div class="toggle-content">
-                                <p>Upload photo of your ID(Voting card ID, Licence ID, National ID or Passport).</p>
-                            </div>
-                        </div>
-                        <div class="toggle">
-                            <label>Your Account</label>
-                            <div class="toggle-content">
-                                <p>Advise us your preferred bank A/C you wish to use to forward proceeds.</p>
-                            </div>
-                        </div>
-                        <div class="toggle">
-                            <label>Money in/out of POCHI</label>
-                            <div class="toggle-content">
-                                <p>Receive a POCHI ID and login via app or website; transfer cash and get started.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="heading-title heading-border-bottom">
-                        <h3>Get Started</h3>
-                    </div>
-                    <div class="toggle toggle-transparent-body toggle-accordion">
-                        <div class="toggle active">
-                            <label>Invest now</label>
-                            <div class="toggle-content">
-                                <p>Transfer cash to your fimco account and view your cash transactions through POCHI. </p>
-                            </div>
-                        </div>
-                        <div class="toggle">
-                            <label>Manage your finances</label>
-                            <div class="toggle-content">
-                                <p>Manage your cash, returns and planning through POCHI interface.</p>
-                            </div>
-                        </div>
-                        <div class="toggle">
-                            <label>Setup and join groups</label>
-                            <div class="toggle-content">
-                                <p>Setup and join groups through Joint POCHI Accounts with other FIMCO members and invest in groups.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4">
-                    <div class="heading-title heading-border-bottom">
-                        <h3>Data and Analysis</h3>
-                    </div>
-                    <div class="toggle toggle-transparent-body toggle-accordion">
-                        <div class="toggle active">
-                            <label>POCHI Admin Dashboard</label>
-                            <div class="toggle-content">
-                                <p>View data related to your balance, interests, POCHI rates, fees and statements. </p>
-                            </div>
-                        </div>
-                        <div class="toggle">
-                            <label>Instant reports</label>
-                            <div class="toggle-content">
-                                <p>View simplified charts and graphs showing your savings and investment patterns.</p>
-                            </div>
-                        </div>
-                        <div class="toggle">
-                            <label>...and many more</label>
-                            <div class="toggle-content">
-                                <p>Access other investment opportunities.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                <p>
+                    At FIMCO, we know our clients’ anxiety of local financial markets is more than it should be, as their
+                    knowledge of the market and opportunities is generally less than it should be. Our investment approach
+                    targets to firmly bridge this gap.
+                </p>
+                <p>
+                    From the first interaction until maturity; we aim to adequately inform you of the key matters for your
+                    investments, advise you of the risk adjusted opportunities possible to you and execute on opportunities
+                    as efficiently as possible.
+                </p>
+                <p>
+                    This will be demonstrated throughout simple on boarding process, our online platform, the accessibility
+                    of resources to assist you and the simplified execution process.
+                </p>
+{#                <div class="col-lg-4">#}
+{#                    <div class="heading-title heading-border-bottom">#}
+{#                        <h3>Register</h3>#}
+{#                    </div>#}
+{#                    <div class="toggle toggle-transparent-body toggle-accordion">#}
+{#                        <div class="toggle active">#}
+{#                            <label>Personal Info</label>#}
+{#                            <div class="toggle-content">#}
+{#                                <p>Enter your personal details; names, email, ID, phone... to create your profile. </p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        <div class="toggle">#}
+{#                            <label>Upload photo</label>#}
+{#                            <div class="toggle-content">#}
+{#                                <p>Upload photo of your ID(Voting card ID, Licence ID, National ID or Passport).</p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        <div class="toggle">#}
+{#                            <label>Your Account</label>#}
+{#                            <div class="toggle-content">#}
+{#                                <p>Advise us your preferred bank A/C you wish to use to forward proceeds.</p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        <div class="toggle">#}
+{#                            <label>Money in/out of POCHI</label>#}
+{#                            <div class="toggle-content">#}
+{#                                <p>Receive a POCHI ID and login via app or website; transfer cash and get started.</p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="col-lg-4">#}
+{#                    <div class="heading-title heading-border-bottom">#}
+{#                        <h3>Get Started</h3>#}
+{#                    </div>#}
+{#                    <div class="toggle toggle-transparent-body toggle-accordion">#}
+{#                        <div class="toggle active">#}
+{#                            <label>Invest now</label>#}
+{#                            <div class="toggle-content">#}
+{#                                <p>Transfer cash to your fimco account and view your cash transactions through POCHI. </p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        <div class="toggle">#}
+{#                            <label>Manage your finances</label>#}
+{#                            <div class="toggle-content">#}
+{#                                <p>Manage your cash, returns and planning through POCHI interface.</p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        <div class="toggle">#}
+{#                            <label>Setup and join groups</label>#}
+{#                            <div class="toggle-content">#}
+{#                                <p>Setup and join groups through Joint POCHI Accounts with other FIMCO members and invest in groups.</p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
+{#                <div class="col-lg-4">#}
+{#                    <div class="heading-title heading-border-bottom">#}
+{#                        <h3>Data and Analysis</h3>#}
+{#                    </div>#}
+{#                    <div class="toggle toggle-transparent-body toggle-accordion">#}
+{#                        <div class="toggle active">#}
+{#                            <label>POCHI Admin Dashboard</label>#}
+{#                            <div class="toggle-content">#}
+{#                                <p>View data related to your balance, interests, POCHI rates, fees and statements. </p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        <div class="toggle">#}
+{#                            <label>Instant reports</label>#}
+{#                            <div class="toggle-content">#}
+{#                                <p>View simplified charts and graphs showing your savings and investment patterns.</p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                        <div class="toggle">#}
+{#                            <label>...and many more</label>#}
+{#                            <div class="toggle-content">#}
+{#                                <p>Access other investment opportunities.</p>#}
+{#                            </div>#}
+{#                        </div>#}
+{#                    </div>#}
+{#                </div>#}
             </div>
         </div>
     </section>
