--- a/fimco/fimcosite/templates/brokerage.html
+++ b/fimco/fimcosite/templates/brokerage.html
@@ -14,9 +14,8 @@
                         <h2>Brokerage</h2>
                     </div>
                     <p>
-                        We offer access to Dar es Salaam Stock Exchange listed securities as a licensed broker/dealer of
-                        securities. As Licensed Dealing Members (LDM) we offer our clients access to equities listed on the
-                        Dar es salaam Stock Exchange
+                        As Licensed Dealing Members (LDM) we offer our clients access to equities listed on the
+                        Dar es salaam (DSE), Nairobi Stock Exchange (NSE) and Uganda Securities Exchange (USE).
                     </p>
                     <p>
                         Our approach to offering brokerage services is simple; we invest our expertise and values to create
@@ -25,13 +24,16 @@
                         closing or opening reports.
                     </p>
                     <p>
-                        Whilst most intermediaries and market watchers provide a snapshot of activity at the end of the
-                        day; through our FIMCO platform we offer our clients a way of staying close to the DSE activity
-                        as they move throughout the trading day.
+                        We are also a key focal point to navigating the East African (Kenya, Tanzania and Uganda)
+                        Fixed Income markets space. Using our extensive knowledge and networks of our Fixed Income markets
+                        we drive price discovery for local and offshore players.
+                    </p>
+                    <p>
+                        Our services in equities and fixed income extend to both the primary and secondary markets.
                     </p>
                     <p>
                         <a href="{% url 'site' 'contact' %}">Contact us</a> and let us discuss how we can help you
-                        navigate the opportunities in the DSE for your portfolio.
+                        navigate the opportunities for your portfolio.
                     </p>
                 </div>
                 <!-- /LEFT -->
