--- a/fimco/fimcosite/templates/fund.html
+++ b/fimco/fimcosite/templates/fund.html
@@ -24,7 +24,26 @@
                         risk adverseness and the yields that the market has to offer.
                     </p>
                     <p>
-                        <a href="{% url 'site' 'contact' %}">Contact us</a> to discuss how we can help you invest your funds profitably.
+                        FIMCO aims to invest on behalf of our clients — from government, large institutions to foundations,
+                        medium and small companies, parents and grandparents, teachers, nurses, doctors and people from
+                        all walks of life.
+                    </p>
+                    <p>
+                        We are client focussed and our responsibility is to ensure that our clients get the insight into
+                        how to invest their by providing solutions that can help them build a better financial future.
+                    </p>
+                    <p>
+                        Our background speaks by itself – being passionate about we do and intensely focused on
+                        performing at the highest levels. The challenges in our market are highly complex and as fund
+                        managers we strive to out-think to what will be the best balance of risk and return across all
+                        available investment opportunities on behalf of our clients.
+                    </p>
+                    <p>
+                        Our clients’ investment objectives comes first and it is our responsibility to ensure that we meet
+                        both your short-term and long-term goals.
+                    </p>
+                    <p>
+                        <a href="{% url 'site' 'contact' %}">Contact us</a> and start investing through us today!
                     </p>
                 </div>
                 <!-- /LEFT -->
