--- a/fimco/fimcosite/templates/index.html
+++ b/fimco/fimcosite/templates/index.html
@@ -596,9 +596,9 @@
                     <div class="col-sm-6">
                         <header class="mb-40">
                             <h1 class="fw-300">Welcome to FIMCO</h1>
-{#                            <h2 class="fw-600 letter-spacing-1 fs-13"><span><i>"HABA HABA HUJAZA KIBABA..."</i></span></h2>#}
+{#                            <h2 class="fw-600 letter-spacing-1 fs-13"><span><i>"HABA na HABA HUJAZA KIBABA..."</i></span></h2>#}
                             <blockquote>
-                                <p class="fw-300 letter-spacing-1 fs-16"><i>"Little by little, a little becomes a lot"; "Haba haba hujaza kibaba"</i></p>
+                                <p class="fw-300 letter-spacing-1 fs-16"><i>"Little by little, a little becomes a lot"; "Haba na haba hujaza kibaba"</i></p>
                                 <cite>Anonymous</cite>
                             </blockquote>
                         </header>
