--- a/fimco/fimcosite/templates/sameer.html
+++ b/fimco/fimcosite/templates/sameer.html
@@ -89,7 +89,7 @@
                                 enabler of mobile banking and bill payment services in the country.
                                 As a pioneering member of the fin-tech industry, Selcom is extremely well-placed to promote
                                 the advancement of cashless solutions through the creation of innovative solutions in
-                                collaboration with various stakeholders."
+                                collaboration with various stakeholders.
                             </p>
                         </header>
 
