--- a/fimco/pochi/templates/pochi/deposit.html
+++ b/fimco/pochi/templates/pochi/deposit.html
@@ -158,31 +158,36 @@
                             <div class="text-center process-wizard-stepnum">Step 1</div>
                             <div class="progress"><div class="progress-bar"></div></div>
                             <a href="#" class="process-wizard-dot"></a>
-                            <div class="process-wizard-info text-center">Dial *150*01#.</div>
+                            <div class="process-wizard-info text-center">
+                                Dial short code<br>
+                                Airtel Money: *150*60#<br>
+                                TigoPesa: *150*01#<br>
+                                M-pesa: *150*00#
+                            </div>
                         </div>
                         <div class="col-xs-2 process-wizard-step complete"><!-- complete -->
                             <div class="text-center process-wizard-stepnum">Step 2</div>
                             <div class="progress"><div class="progress-bar"></div></div>
                             <a href="#" class="process-wizard-dot"></a>
-                            <div class="process-wizard-info text-center">Select number.</div>
+                            <div class="process-wizard-info text-center">Select POCHI</div>
                         </div>
                         <div class="col-xs-2 process-wizard-step complete"><!-- complete -->
                             <div class="text-center process-wizard-stepnum">Step 3</div>
                             <div class="progress"><div class="progress-bar"></div></div>
                             <a href="#" class="process-wizard-dot"></a>
-                            <div class="process-wizard-info text-center">Enter your account number.</div>
+                            <div class="process-wizard-info text-center">Enter POCHI account number you want to transfer to</div>
                         </div>
                         <div class="col-xs-3 process-wizard-step complete"><!-- complete -->
                             <div class="text-center process-wizard-stepnum">Step 4</div>
                             <div class="progress"><div class="progress-bar"></div></div>
                             <a href="#" class="process-wizard-dot"></a>
-                            <div class="process-wizard-info text-center">Enter the amount you want to deposit.</div>
+                            <div class="process-wizard-info text-center">Enter the amount you want to deposit</div>
                         </div>
                         <div class="col-xs-3 process-wizard-step active"><!-- active -->
                             <div class="text-center process-wizard-stepnum">Step 5</div>
                             <div class="progress"><div class="progress-bar"></div></div>
                             <a href="#" class="process-wizard-dot"></a>
-                            <div class="process-wizard-info text-center">Complete the remaining steps.</div>
+                            <div class="process-wizard-info text-center">Complete the remaining steps</div>
                         </div>
                     </div>
                 </div>
@@ -196,40 +201,18 @@
                 </div>
                 <div class="panel-body">
                     <div class="heading-title text-center mb-80">
-						<h3>Fill in the Transaction Transfer Form from local bank.</h3>
+						<h4>
+                            You can transfer money into a POCHI account from any bank using any of the below FIMCO Bank
+                            Accounts. <strong>Please ensure you clearly indicate your POCHI ID and Mobile Number in the
+                                Bank Transfer Form at your bank.</strong>
+                        </h4>
 					</div>
-{#                    <div class="row process-wizard process-wizard-info">#}
-{#                        <div class="col-xs-2 process-wizard-step complete">#}
-{#                            <div class="text-center process-wizard-stepnum">Step 1</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->#}
-{#                            <div class="text-center process-wizard-stepnum">Step 2</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->#}
-{#                            <div class="text-center process-wizard-stepnum">Step 3</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                        <div class="col-xs-3 process-wizard-step complete"><!-- complete -->#}
-{#                            <div class="text-center process-wizard-stepnum">Step 4</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                        <div class="col-xs-3 process-wizard-step active"><!-- active -->#}
-{#                            <div class="text-center process-wizard-stepnum">Step 5</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                    </div>#}
+                    <div>
+                        <h5>Bank 1:</h5>
+                        <p>Reference: Your POCHI ID/Mobile Number</p>
+                        <h5>Bank 2:</h5>
+                        <p>Reference: Your POCHI ID/Mobile Number</p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -243,38 +226,38 @@
                     <div class="heading-title text-center mb-80">
 						<h3></h3>
 					</div>
-{#                    <div class="row process-wizard process-wizard-info">#}
-{#                        <div class="col-xs-2 process-wizard-step complete">#}
-{#                            <div class="text-center process-wizard-stepnum">Step 1</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->#}
-{#                            <div class="text-center process-wizard-stepnum">Step 2</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->#}
-{#                            <div class="text-center process-wizard-stepnum">Step 3</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                        <div class="col-xs-3 process-wizard-step complete"><!-- complete -->#}
-{#                            <div class="text-center process-wizard-stepnum">Step 4</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                        <div class="col-xs-3 process-wizard-step active"><!-- active -->#}
-{#                            <div class="text-center process-wizard-stepnum">Step 5</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                    </div>#}
+                    <div class="row process-wizard process-wizard-info">
+                        <div class="col-xs-2 process-wizard-step complete">
+                            <div class="text-center process-wizard-stepnum">Step 1</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">Dial USSD code for your bank</div>
+                        </div>
+                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->
+                            <div class="text-center process-wizard-stepnum">Step 2</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">Select POCHI</div>
+                        </div>
+                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->
+                            <div class="text-center process-wizard-stepnum">Step 3</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">Enter POCHI account number you want to transfer to</div>
+                        </div>
+                        <div class="col-xs-3 process-wizard-step complete"><!-- complete -->
+                            <div class="text-center process-wizard-stepnum">Step 4</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">Enter amount</div>
+                        </div>
+                        <div class="col-xs-3 process-wizard-step active"><!-- active -->
+                            <div class="text-center process-wizard-stepnum">Step 5</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">Complete the remaining steps</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
@@ -288,38 +271,56 @@
                     <div class="heading-title text-center mb-80">
 						<h3></h3>
 					</div>
-{#                    <div class="row process-wizard process-wizard-info">#}
-{#                        <div class="col-xs-2 process-wizard-step complete">#}
-{#                            <div class="text-center process-wizard-stepnum">Step 1</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->#}
-{#                            <div class="text-center process-wizard-stepnum">Step 2</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                        <div class="col-xs-2 process-wizard-step complete"><!-- complete -->#}
-{#                            <div class="text-center process-wizard-stepnum">Step 3</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                        <div class="col-xs-3 process-wizard-step complete"><!-- complete -->#}
-{#                            <div class="text-center process-wizard-stepnum">Step 4</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                        <div class="col-xs-3 process-wizard-step active"><!-- active -->#}
-{#                            <div class="text-center process-wizard-stepnum">Step 5</div>#}
-{#                            <div class="progress"><div class="progress-bar"></div></div>#}
-{#                            <a href="#" class="process-wizard-dot"></a>#}
-{#                            <div class="process-wizard-info text-center"></div>#}
-{#                        </div>#}
-{#                    </div>#}
+                    <div>
+                        <h5>
+                            You can deposit cash into any of the below accounts. Please ensure you clearly indicate your
+                            POCHI ID and Mobile Number in the Bank Transfer Form at your bank.
+                        </h5>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div id="content" class="padding-20">
+            <div class="panel panel-default">
+                <div class="panel-heading panel-heading-transparent">
+                    <strong>POCHI to POCHI</strong>
+                </div>
+                <div class="panel-body">
+                    <div class="heading-title text-center mb-80">
+						<h3>Login to your POCHI account, under MyPochi menu go to Fund Transfer and follow the steps below</h3>
+					</div>
+                    <div class="row process-wizard process-wizard-info">
+                        <div class="col-xs-2 process-wizard-step complete">
+                            <div class="text-center process-wizard-stepnum">Step 1</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">Pochi to Pochi</div>
+                        </div>
+                        <div class="col-xs-2 process-wizard-step complete">
+                            <div class="text-center process-wizard-stepnum">Step 2</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">From dropdown select method of transfer (account or mobile number)</div>
+                        </div>
+                        <div class="col-xs-3 process-wizard-step complete">
+                            <div class="text-center process-wizard-stepnum">Step 3</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">Enter POCHI Account or Mobile Number depending on the option chosen above</div>
+                        </div>
+                        <div class="col-xs-3 process-wizard-step complete">
+                            <div class="text-center process-wizard-stepnum">Step 4</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">Enter amount</div>
+                        </div>
+                        <div class="col-xs-3 process-wizard-step active"><!-- active -->
+                            <div class="text-center process-wizard-stepnum">Step 5</div>
+                            <div class="progress"><div class="progress-bar"></div></div>
+                            <a href="#" class="process-wizard-dot"></a>
+                            <div class="process-wizard-info text-center">Click send money</div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
