--- a/fimco/pochi/templates/pochi/earnings.html
+++ b/fimco/pochi/templates/pochi/earnings.html
@@ -11,14 +11,7 @@
                 {% for message in messages %}
                     {% if message.level == DEFAULT_MESSAGE_LEVELS.INFO %}
                         <div class="col-lg-6 col-xs-12 col-centered">
-                            <div class="alert alert-info margin-bottom-30">
-                                <button type="button" class="close" data-dismiss="alert">
-                                    <span aria-hidden="true">×</span>
-                                    <span class="sr-only">Close</span>
-                                </button>
-                                <p><strong>{{ message }}</strong></p>
-                                <button type="button" class="btn btn-info" data-dismiss="alert">OK</button>
-                            </div>
+                            <p><strong>{{ message }}</strong></p>
                         </div>
                     {% endif %}
                 {% endfor %}
@@ -30,7 +23,7 @@
                         <div class="panel-heading">
                             <span class="title elipsis">
                                 {% if page == 'rates' %}
-                                    <strong>Rates</strong>
+                                    <strong>POCHI Rates</strong>
                                 {% elif page == 'daily' %}
                                     <strong>Daily Earnings</strong>
                                 {% elif page == 'monthly' %}
@@ -42,6 +35,23 @@
                         </div>
                         <div class="panel-body">
                             <div class="table-responsive">
+                                <div class="row">
+                                    <form method="get">
+                                        <div class="col-lg-6 col-md-5 col-sm-5">
+                                            <label>
+                                                <input type="text"
+                                                       class="form-control rangepicker"
+                                                       name="{{ page }}_range"
+                                                       value=""
+                                                       data-format="yyyy-mm-dd"
+                                                       data-from="2018-01-01"
+                                                       data-to="2018-12-31">
+                                            </label>
+                                            <input type="hidden" name="interest" value="{{ page }}">
+                                            <input type="submit" class="btn btn-primary" value="GO">
+                                        </div>
+                                    </form>
+                                </div>
                                 <table id="earningsTable" class="table table-vertical-middle nomargin">
                                     <thead>
                                         <tr>
@@ -136,33 +146,14 @@
                     </div>
                 </div>
             </div>
-            <div class="panel panel-default fixed-panel">
-                <div class="panel-body">
-                    <div class="row">
-                        <form method="get">
-                            <div class="col-lg-9 col-md-8 col-sm-8">
-                                <label>
-                                    <input type="text"
-                                           class="form-control rangepicker"
-                                           name="{{ page }}_range"
-                                           value=""
-                                           data-format="yyyy-mm-dd"
-                                           data-from="2018-01-01"
-                                           data-to="2018-12-31">
-                                </label>
-                            </div>
-                            <div class="col-lg-3 col-md-4 col-sm-4">
-                                <input type="hidden" name="interest" value="{{ page }}">
-                                <input type="submit" class="btn btn-primary" value="GO">
-                            </div>
-                        </form>
-                    </div>
-                </div>
-            </div>
             {% if group %}
-                <a href="{% url 'group_dashboard' group %}" id="fixed-btn" class="btn btn-primary"><i class="fa fa-arrow-left"></i>Dashboard</a>
+                <a href="{% url 'group_dashboard' group %}" class="btn btn-primary">
+                    <i class="fa fa-arrow-left"></i>Back to Dashboard
+                </a>
             {% else %}
-                <a href="{% url 'dashboard' %}" id="fixed-btn" class="btn btn-primary"><i class="fa fa-arrow-left"></i>Dashboard</a>
+                <a href="{% url 'dashboard' %}" class="btn btn-primary">
+                    <i class="fa fa-arrow-left"></i>Back to Dashboard
+                </a>
             {% endif %}
         </div>
     </section>
