Updated website components

--- a/fimco/fimcosite/templates/about.html
+++ b/fimco/fimcosite/templates/about.html
@@ -364,9 +364,13 @@
                     as efficiently as possible.
                 </p>
                 <p>
-                    This will be demonstrated throughout simple on boarding process, our online platform, the accessibility
-                    of resources to assist you and the simplified execution process.
+                    This will be demonstrated throughout simple on boarding process, the accessibility of resources to
+                    assist you and the simplified execution process.
                 </p>
+{#                <p>#}
+{#                    This will be demonstrated throughout simple on boarding process, our online platform, the accessibility#}
+{#                    of resources to assist you and the simplified execution process.#}
+{#                </p>#}
 {#                <div class="col-lg-4">#}
 {#                    <div class="heading-title heading-border-bottom">#}
 {#                        <h3>Register</h3>#}
