--- a/fimco/fimcosite/templates/fund.html
+++ b/fimco/fimcosite/templates/fund.html
@@ -18,10 +18,10 @@
                         returns and manage risks accordingly.
                     </p>
                     <p>
-                        Client can choose from standardized fund solutions such as POCHI, or our Dollar Fund to maximize
-                        on their returns by pooling funds by FIMCO which then invests diligently in the local markets;
-                        or bespoke solutions that cater to our clients Size of investment, liquidity preference,
-                        risk adverseness and the yields that the market has to offer.
+                        Clients can choose from standardized fund solutions to maximize their returns by pooling funds to
+                        FIMCO which then invests diligently in the local markets; or bespoke solutions that cater to our
+                        clients Size of investment, liquidity preference, risk averseness and the yields that the market
+                        has to offer.
                     </p>
                     <p>
                         FIMCO aims to invest on behalf of our clients — from government, large institutions to foundations,
